...
      {hasConversationPermission && (
        <Tab.Screen name="Inbox" component={InboxStack} options={{ headerShown: false }} />
      )}
      {hasConversationPermission && (
        <Tab.Screen
          name="Conversations"
          options={{ headerShown: false, tabBarTestID: 'tab-conversations' }}
          component={ConversationStack}
        />
      )}
      <Tab.Screen
        name="Contacts"
        options={{ headerShown: false, tabBarTestID: 'tab-contacts' }}
...
          options={{ headerShown: false, tabBarTestID: 'tab-agent-status' }}
          component={AgentStatusStack}
        />
      )}
      <Tab.Screen
        name="Settings"
        options={{ headerShown: false, tabBarTestID: 'tab-settings' }}
        component={SettingsStack}
      />
    </Tab.Navigator>
  );
};

...
